Add WeatherObject Add SeasonObject Update ParseClassesInPackage Update Weather service Update Season service Update ChallengesTicker Update current config