@@ -1,25 +1,18 @@
 package ru.kochkaev.Seasons4Fabric.util;
 
 import com.google.common.reflect.ClassPath;
-
-import java.util.function.Consumer;
+import ru.kochkaev.Seasons4Fabric.util.functional.IFuncObjectReg;
 
 public class ParseClassesInPackage<O> {
 
-    public ParseClassesInPackage(String packageName, Consumer<Object> regMethod) {
+    public ParseClassesInPackage(String packageName, Class<O> superClass, IFuncObjectReg<O> regMethod) {
         try {
             ClassPath cp = ClassPath.from(ParseClassesInPackage.class.getClassLoader());
             for (ClassPath.ClassInfo classInfo : cp.getTopLevelClassesRecursive(packageName)) {
                 Class<?> clazz = Class.forName(classInfo.getName());
-                try {
-                    //Class<O> obj = new Class<O>().newInstance();
-                    //if (clazz.isAssignableFrom(obj.getClass())) {
-
-//                    O object = (O) clazz.getDeclaredConstructor().newInstance();
-                    regMethod.accept(clazz.getDeclaredConstructor().newInstance());
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
+                Object object = clazz.getDeclaredConstructor().newInstance();
+//                if (object.getClass().getSuperclass() == superClass);
+                regMethod.function(superClass.cast(object));
             }
         } catch (Exception e) {
             e.printStackTrace();
